Edit grid to be made using flexbox

--- a/index.html
+++ b/index.html
@@ -6,22 +6,21 @@
     <title>Document</title>
 </head>
 <style>
-    :root {
-  --grid-cols: 1;
-  --grid-rows: 1;
-}
 
 #container {
-  display: grid;
-  grid-gap: 1em;
-  grid-template-rows: repeat(var(--grid-rows), 1fr);
-  grid-template-columns: repeat(var(--grid-cols), 1fr);
+  display: flex;
+  flex-wrap: wrap;
 }
-
-.grid-item {
-  padding: 1em;
-  border: 1px solid #ddd;
-  text-align: center;
+div {
+  border: 1px solid black;
+  height: 25px;
+  width: 25px;
+  
+}
+div:nth-child(16n+1) {
+  width: 100%;
+  border: 0;
+  height: 0;
 }
 </style>
 <body>
