Add hover effect

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@ div:nth-child(17n+1) {
   height: 0;
   
 }
+div:hover {
+  background-color: yellow;
+}
 </style>
 <body>
     <div id="container"></div>
