Fix hover so that the colour stays after unhovering

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Etch-a-sketch</title>
 </head>
 <style>
 
 #container {
   display: flex;
   flex-wrap: wrap;
- 
+  background-color: white;
+  margin: 100px auto;
 }
 div {
   border: 1px solid black;
@@ -24,12 +25,15 @@ div:nth-child(17n+1) {
   height: 0;
   
 }
-div:hover {
-  background-color: yellow;
-}
+
+
+
 </style>
 <body>
-    <div id="container"></div>
-    <script src="myscript.js"></script>
+  
+  
+  <div id="container"></div>
+  
+  <script src="myscript.js"></script>
 </body>
 </html>
